@@ -66,6 +66,9 @@ void          nsc_gstreamer_cancel_convert    (NscGStreamer    *gstreamer);
 
 gboolean      nsc_gstreamer_supports_profile  (GMAudioProfile  *profile);
 gboolean      nsc_gstreamer_supports_encoding (GError         **error);
+gboolean      nsc_gstreamer_supports_mp3      (GError         **error);
+gboolean      nsc_gstreamer_supports_wav      (GError         **error);
+gboolean      nsc_gstreamer_supports_aac      (GError         **error);
 
 G_END_DECLS
 
